# Mastermind

./: CMakeLists.txt  README.md
include/: board.h  canvas.h  choice.h  clue.h  color.h  event.h  mastermind.h  scores.h  surface.h  text.h  utils.h  window.h
interface/no_sdl/: event.c  surface.c  text.c
interface/sdl/: event.c  surface.c  text.c
src/: board.c  board.h  choice.c  choice.h  clue.c  clue.h  color.c  color.h  main.c  mastermind.c  mastermind.h  scores.c  scores.h  surface.c  surface.h  text.c  text.h  window.c  window.h
test/: tests.c
